Feature ETP-4479: Detach removed payment details from parent collection